--- a/frontend/src/Login.css
+++ b/frontend/src/Login.css
@@ -5,16 +5,13 @@ body {
   font-family: 'Arial', sans-serif;
   background: linear-gradient(135deg, #dbe7de, #206730); /* Gradient background */
   height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .login-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: 100vh;
 }
 
 .login-box {
