--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,13 +11,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-/* Remove or modify these conflicting styles */
-/* body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-} */
-
-/* Keep the rest of your index.css styles */
+body {
+  height: 100vh;
+}
