--- a/frontend/src/components/Home/Toolbar/SearchBox/SearchBox.css
+++ b/frontend/src/components/Home/Toolbar/SearchBox/SearchBox.css
@@ -1,11 +1,30 @@
+/* SearchBox.css */
 .searchbox-container {
     width: 400px;
-    height: 30px;
     display: flex;
     align-items: center;
+    gap: 10px;
 }
 
 .searchbox-input {
-    width: calc(100% - 80px);
-    margin-right: 40px;
+    width: 100%;
+    padding: 8px 12px;
+    border: none;
+    border-radius: 4px;
+    background: rgba(255, 255, 255, 0.9);
+    color: black;
+}
+
+.searchbox-button {
+    padding: 8px 16px;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+.searchbox-button:hover {
+    background: #184815;
 }
