--- a/frontend/src/components/Home/Toolbar/SearchBox/SearchBox.css
+++ b/frontend/src/components/Home/Toolbar/SearchBox/SearchBox.css
@@ -17,7 +17,8 @@
 
 .searchbox-button {
     padding: 8px 16px;
-    color: white;
+    background: rgba(255, 255, 255, 0.9);
+    color: black;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -26,5 +27,5 @@
 }
 
 .searchbox-button:hover {
-    background: #184815;
+    background: rgba(255, 255, 255, 0.6);
 }
