Add frontend call to remove product

--- a/frontend/src/components/Home/Listings/Listings.css
+++ b/frontend/src/components/Home/Listings/Listings.css
@@ -171,6 +171,10 @@
   background: #c82333;
 }
 
+.listings li button.disabled {
+  background: #bbbbbb;
+}
+
 .listings li span {
   font-size: 16px;
   color: #333;
